--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+     <link rel="stylesheet" href="./css/output.css">
     <title>Document</title>
 
     <style>
@@ -257,6 +258,3 @@
 </body>
 
 </html>
-<!--  -->
-<!--  -->
-<!--  -->
